--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -53,12 +53,12 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \textbf{\MakeUppercase{Note:}} Before placing the Near tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the tiles with an Obelisk are not placed adjacent to each other.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-To win the Scenario, a Hero must obtain the Grail token and bring it to their Faction Town.
+To win the Scenario, a Hero must obtain the Grail Token and bring it to their Faction Town.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 If the Grail is not obtained at least once by the end of the \nth{13} Round, the game ends, and all players lose the Scenario.
 
-If the Grail token has been obtained, the players gain additional time (until the end of the \nth{16} Round) to bring the Grail to their Faction's Town. Otherwise, all players lose the Scenario.
+If the Grail Token has been obtained, the players gain additional time (until the end of the \nth{16} Round) to bring the Grail to their Faction's Town. Otherwise, all players lose the Scenario.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -105,16 +105,16 @@ During this Scenario:
   \item Whenever an Astrologers Proclaim or Event card that allows you to Recruit Neutral Units is drawn, ignore it and draw a new Astrologers Proclaim or Event card.
   \item Players can use their Deck of Might \& Magic when paying gold to defend their Faction Town.
   \item Ignore Combat encounters on the Field with the Grail.
-  \item Players may not Visit the Field with the Grail token unless they have already Visited at least two Obelisks or the Grail token has been taken by any Hero at least once.
-  \item To obtain the Grail token, a player’s Hero must spend 2 MPs on the Field with the Grail.
-  \item If a player does not possess the title of ``\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a Faction Unit card from their Unit deck immediately after obtaining the Grail token. This effect can only occur once per player.
-  \item If another Hero defeats the Hero with the Grail token, they also take the Grail token.
-  \item If a Hero with the Grail token Surrenders, the Grail token is placed on the hex where the Hero Surrendered.
-  \item If a Neutral army defeats the Hero with the Grail token, the Grail token is placed on the Field where the Hero was defeated.
-  \item If a Hero with the Grail token casts Town Portal or uses the Inferno Faction Castle Gate building, the Grail token is placed on the hex where the Spell was cast or the building used.
-  \item The Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat, if the Hero is a \textcolor{darkcandyapplered}{Blood Knight}, discard a card to remove up to 2 \svg{damage-red} from your Units and assign it to enemy Units.''
-  \item A Hero with the Grail token who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may pay 10 \svg{gold} or 3 \svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction cube on the Grail token to mark this effect.
-  \item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat Round, if the Hero is a \textcolor{cobalt}{Grail Knight}, discard a card to remove up to 2 \svg{damage-red} from your Units.''
+  \item Players may not Visit the Field with the Grail Token unless they have already Visited at least two Obelisks or the Grail Token has been taken by any Hero at least once.
+  \item To obtain the Grail Token, a player’s Hero must spend 2 MPs on the Field with the Grail.
+  \item If a player does not possess the title of ``\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a Faction Unit card from their Unit deck immediately after obtaining the Grail Token. This effect can only occur once per player.
+  \item If another Hero defeats the Hero with the Grail Token, they also take the Grail Token.
+  \item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.
+  \item If a Neutral army defeats the Hero with the Grail Token, the Grail Token is placed on the Field where the Hero was defeated.
+  \item If a Hero with the Grail Token casts Town Portal or uses the Inferno Faction Castle Gate building, the Grail Token is placed on the hex where the Spell was cast or the building used.
+  \item The Grail Token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat, if the Hero is a \textcolor{darkcandyapplered}{Blood Knight}, discard a card to remove up to 2 \svg{damage-red} from your Units and assign it to enemy Units.''
+  \item A Hero with the Grail Token who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may pay 10 \svg{gold} or 3 \svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction cube on the Grail Token to mark this effect.
+  \item Once cleansed, the Grail Token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat Round, if the Hero is a \textcolor{cobalt}{Grail Knight}, discard a card to remove up to 2 \svg{damage-red} from your Units.''
 \end{itemize}
 
 \vspace*{\fill}
