--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -74,7 +74,7 @@ There are unflagged Mines or Settlements left in map at the end of Round 8.
     \item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.
     \item For the last Mine/Settlement battle, add a \svgunit{golden} Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!
     \item The first time you reach level IV, gain your second specialty.
-    \item When you reach level IV, move your token on the level tracker to level III.
+    \item When you reach level IV, move your Token on the level tracker to level III.
     \item Additionally, no player can:
     \begin{itemize}
         \item Attack other Heroes.
