--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -86,7 +86,7 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
   Then, flag the VII Field with a Faction cube.
   (There is no bonus in solo play!)
   \item Ignore all yellow borders in I tiles.
-  \item You can use your build token to give your resources to another player.
+  \item You can use your build Token to give your resources to another player.
   \item Two players can use their build Tokens to exchange Artifacts and/or Spells.
   \item Whenever a player Visits an Obelisk, that player rolls one treasure Die and one resource Die, and resolves one of them.
   \item When all VII Fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit cards from each of their corresponding decks to create a separate deck of Neutral Units for the Titans' Stronghold (the deck of the Titans' Stronghold is sometimes split in two because certain Scenarios are otherwise impossible to implement with the cards from certain expansions).
